# MyOpenGLProject

./: CMakeLists.txt
include/: config.h  linear_algebros.h  material.h  triangle_mesh.h
include/app/: app.h
include/component/: camera_component.h  physics_component.h  render_component.h  transform_component.h
include/factory/: factory.h
include/systems/: camera_system.h  motion_system.h  render_system.h
include/view/: shader.h
src/: config.cpp  linear_algebros.cpp  main.cpp  material.cpp  triangle_mesh.cpp
src/app/: app.cpp
src/factory/: factory.cpp
src/shaders/: fragment.txt  vertex.txt
src/systems/: camera_system.cpp  motion_system.cpp  render_system.cpp
src/view/: shader.cpp
